--- a/index.html
+++ b/index.html
@@ -7,80 +7,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/stylesheets/style.css">
+    <link rel="stylesheet" href="./assets/stylesheets/style-bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <p>Meu primeiro site</p>
-        <ul>
-            <li class='nav-item'><a href="#sobre">Sobre</a></li>
-            <li class='nav-item'><a href="#contato">Contato</a></li>
-            <li id='nav-cadastro'>Cadastre-se</li>
-            <li class='nav-item'>Login</li> 
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Meu primeiro site</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Sobre <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cadastre-se</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Login</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <aside>
-        <section class="carousel" aria-label="Gallery">
-            <ol class="carousel__viewport">
-              <li id="carousel__slide1"
-                  tabindex="0"
-                  class="carousel__slide">
-                <div class="carousel__snapper">
-                  <a href="#carousel__slide4"
-                     class="carousel__prev">Go to last slide</a>
-                  <a href="#carousel__slide2"
-                     class="carousel__next">Go to next slide</a>
-                </div>
-              </li>
-              <li id="carousel__slide2"
-                  tabindex="0"
-                  class="carousel__slide">
-                <div class="carousel__snapper"></div>
-                <a href="#carousel__slide1"
-                   class="carousel__prev">Go to previous slide</a>
-                <a href="#carousel__slide3"
-                   class="carousel__next">Go to next slide</a>
-              </li>
-              <li id="carousel__slide3"
-                  tabindex="0"
-                  class="carousel__slide">
-                <div class="carousel__snapper"></div>
-                <a href="#carousel__slide2"
-                   class="carousel__prev">Go to previous slide</a>
-                <a href="#carousel__slide4"
-                   class="carousel__next">Go to next slide</a>
-              </li>
-              <li id="carousel__slide4"
-                  tabindex="0"
-                  class="carousel__slide">
-                <div class="carousel__snapper"></div>
-                <a href="#carousel__slide3"
-                   class="carousel__prev">Go to previous slide</a>
-                <a href="#carousel__slide1"
-                   class="carousel__next">Go to first slide</a>
-              </li>
-            </ol>
-            <div class="carousel__navigation">
-              <ol class="carousel__navigation-list">
-                <li class="carousel__navigation-item">
-                  <a href="#carousel__slide1"
-                     class="carousel__navigation-button">Go to slide 1</a>
-                </li>
-                <li class="carousel__navigation-item">
-                  <a href="#carousel__slide2"
-                     class="carousel__navigation-button">Go to slide 2</a>
-                </li>
-                <li class="carousel__navigation-item">
-                  <a href="#carousel__slide3"
-                     class="carousel__navigation-button">Go to slide 3</a>
-                </li>
-                <li class="carousel__navigation-item">
-                  <a href="#carousel__slide4"
-                     class="carousel__navigation-button">Go to slide 4</a>
-                </li>
-              </ol>
-            </div>
-          </section>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="./assets/img/img-paisagem1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/img/img-paisagem2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/img/img-paisagem3.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </aside>
     <main>
         <div id="sobre">
@@ -109,5 +85,8 @@
             
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
